test_regress/t/t_randomize.out
%Warning-CONSTRAINTIGN: t/t_randomize.v:22:14: Constraint expression ignored (imperfect distribution)
                                             : ... note: In instance 't'
   22 |       length dist { [0:1], [2:5] :/ 2, 6 := 6, 7 := 10, 1};
      |              ^~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
